<resources>
    <string name="app_name">UnitConterto</string>
    <string name="heading">Unit Conversion</string>
    <string name="menuName">Main Menu</string>
    <string name="backgroundImage">background</string>

   <!--List of units for force conversion -->

   <string name="FirstForce">Please enter your force value</string>
   <string name="secondForce">Your force value you want</string>
   <string name="thirdForce">Your force value is</string>
   <string name="CD_Force">Please enter your value</string>

   <string name="forceCon">Force Conversion</string>

   <string-array name="ForceUnits">
      <item>Dyne</item>
      <item>Gram-force</item>
      <item>Poundal</item>
      <item>Pound-force</item>
      <item>Kilogram-force</item>
   </string-array>

   <!--List of units for time conversion -->

   <string name="FirstTime">Please enter your time value</string>
   <string name="secondTime">Your time value you want</string>
   <string name="thirdTime">Your time value is</string>
   <string name="CD_Time">Please enter your value</string>

   <string name="timeCon">Time Conversion</string>

   <string-array name="TimeUnits">
      <item>Millisecond</item>
      <item>Decisecond</item>
      <item>Centisecond</item>
      <item>Seconds</item>
      <item>Minutes</item>
      <item>Hours</item>
      <item>Days</item>
   </string-array>

   <!--List of units for distance conversion -->

   <string name="FirstDist">Please enter your distance value</string>
   <string name="secondDist">Your distance value you want</string>
   <string name="thirdDist">Your distance value is</string>
   <string name="CD_dist">Please enter your value</string>

   <string name="distCon">Distance Conversion</string>

   <string-array name="DistanceUnits">
      <item>Millimeter</item>
      <item>Decimeter</item>
      <item>Centimeter</item>
      <item>Meter</item>
      <item>Dekameter</item>
      <item>Hectometer</item>
      <item>Kilometer</item>
   </string-array>

    <!--List of units for temperature conversion -->

   <string name="FirstTemp">Please enter your temperature value</string>
   <string name="secondTemp">Your temperature value you want</string>
   <string name="thirdTemp">Your temperature value is</string>
   <string name="CD_temp">Please enter your value</string>

   <string name="temperatureCon">Temperature Conversion</string>

    <string-array name="TemperatureUnits">
        <item>Kelvin</item>
        <item>Fahrenheit</item>
        <item>Rankine</item>
        <item>Newton</item>
        <item>Romer</item>
        <item>Reaumur</item>
        <item>Delis le</item>
    </string-array>

   <!--List of units for mass conversion -->

   <string name="FirstMass">Please enter your mass value</string>
   <string name="secondMass">Your mass value you want</string>
   <string name="thirdMass">Your mass value is</string>
   <string name="CD_Mass">Please enter your value</string>

   <string name="massCon">Mass Conversion</string>

   <string-array name="MassUnits">
      <item>Milligram</item>
      <item>Decigram</item>
      <item>Centigram</item>
      <item>Gram</item>
      <item>Dekagram</item>
      <item>Hectogram</item>
      <item>Kilogram</item>
      <item>Tonne</item>
   </string-array>

    <!--List of units for currency conversion -->
   <string name="currencyCon">Currency Conversion</string>
    <string name="FirstCurr">Please enter your currency value</string>
    <string name="secondtCurr">Your currency value you want</string>
    <string name="thirdCurr">Your currency value is</string>

   <string name="CD_curr">Please enter your ammount</string>

    <string-array name="CurrencyUnits">
       <item>Afghanistan</item>
       <item>Albania</item>
       <item>Algeria</item>
       <item>Andorra</item>
       <item>Angola</item>
       <item>Antigua and Barbuda</item>
       <item>Argentina</item>
       <item>Armenia</item>
       <item>Australia</item>
       <item>Austria</item>
       <item>Azerbaijan</item>
       <item>The Bahamas</item>
       <item>Bahrain</item>
       <item>Bangladesh</item>
       <item>Barbados</item>
       <item>Belarus</item>
       <item>Belgium</item>
       <item>Belize</item>
       <item>Benin</item>
       <item>Bhutan</item>
       <item>Bolivia</item>
       <item>Bosnia and Herzegovina</item>
       <item>Botswana</item>
       <item>Brazil</item>
       <item>Brunei</item>
       <item>Bulgaria</item>
       <item>Burkina Faso</item>
       <item>Burundi</item>
       <item>Cambodia</item>
       <item>Cameroon</item>
       <item>Canada</item>
       <item>Cape Verde</item>
       <item>Central African Republic</item>
       <item>Chad</item>
       <item>Chile</item>
       <item>China</item>
       <item>Colombia</item>
       <item>Comoros</item>
       <item>Congo, Republic of the</item>
       <item>Congo, Democratic Republic of the</item>
       <item>Costa Rica</item>
       <item>Cote d\'Ivoire</item>
       <item>Croatia</item>
       <item>Cuba</item>
       <item>Cyprus</item>
       <item>Czech Republic</item>
       <item>Denmark</item>
       <item>Djibouti</item>
       <item>Dominica</item>
       <item>Dominican Republic</item>
       <item>East Timor (Timor-Leste)</item>
       <item>Ecuador</item>
       <item>Egypt</item>
       <item>El Salvador</item>
       <item>Equatorial Guinea</item>
       <item>Eritrea</item>
       <item>Estonia</item>
       <item>Ethiopia</item>
       <item>Fiji</item>
       <item>Finland</item>
       <item>France</item>
       <item>Gabon</item>
       <item>The Gambia</item>
       <item>Georgia</item>
       <item>Germany</item>
       <item>Ghana</item>
       <item>Greece</item>
       <item>Grenada</item>
       <item>Guatemala</item>
       <item>Guinea</item>
       <item>Guinea-Bissau</item>
       <item>Guyana</item>
       <item>Haiti</item>
       <item>Honduras</item>
       <item>Hungary</item>
       <item>Iceland</item>
       <item>India</item>
       <item>Indonesia</item>
       <item>Iran</item>
       <item>Iraq</item>
       <item>Ireland</item>
       <item>Israel</item>
       <item>Italy</item>
       <item>Jamaica</item>
       <item>Japan</item>
       <item>Jordan</item>
       <item>Kazakhstan</item>
       <item>Kenya</item>
       <item>Kiribati</item>
       <item>Korea, North</item>
       <item>Korea, South</item>
       <item>Kosovo</item>
       <item>Kuwait</item>
       <item>Kyrgyzstan</item>
       <item>Laos</item>
       <item>Latvia</item>
       <item>Lebanon</item>
       <item>Lesotho</item>
       <item>Liberia</item>
       <item>Libya</item>
       <item>Liechtenstein</item>
       <item>Lithuania</item>
       <item>Luxembourg</item>
       <item>Macedonia</item>
       <item>Madagascar</item>
       <item>Malawi</item>
       <item>Malaysia</item>
       <item>Maldives</item>
       <item>Mali</item>
       <item>Malta</item>
       <item>Marshall Islands</item>
       <item>Mauritania</item>
       <item>Mauritius</item>
       <item>Mexico</item>
       <item>Micronesia, Federated States of</item>
       <item>Moldova</item>
       <item>Monaco</item>
       <item>Mongolia</item>
       <item>Montenegro</item>
       <item>Morocco</item>
       <item>Mozambique</item>
       <item>Myanmar</item>
       <item>Namibia</item>
       <item>Nauru</item>
       <item>Nepal</item>
       <item>Netherlands</item>
       <item>New Zealand</item>
       <item>Nicaragua</item>
       <item>Niger</item>
       <item>Nigeria</item>
       <item>Norway</item>
       <item>Oman</item>
       <item>Pakistan</item>
       <item>Palau</item>
       <item>Panama</item>
       <item>Papua New Guinea</item>
       <item>Paraguay</item>
       <item>Peru</item>
       <item>Philippines</item>
       <item>Poland</item>
       <item>Portugal</item>
       <item>Qatar</item>
       <item>Romania</item>
       <item>Russia</item>
       <item>Rwanda</item>
       <item>Saint Kitts and Nevis</item>
       <item>Saint Lucia</item>
       <item>Saint Vincent and the Grenadines</item>
       <item>Samoa</item>
       <item>San Marino</item>
       <item>Sao Tome and Principe</item>
       <item>Saudi Arabia</item>
       <item>Senegal</item>
       <item>Serbia</item>
       <item>Seychelles</item>
       <item>Sierra Leone</item>
       <item>Singapore</item>
       <item>Slovakia</item>
       <item>Slovenia</item>
       <item>Solomon Islands</item>
       <item>Somalia</item>
       <item>South Africa</item>
       <item>South Sudan</item>
       <item>Spain</item>
       <item>Sri Lanka</item>
       <item>Sudan</item>
       <item>Suriname</item>
       <item>Swaziland</item>
       <item>Sweden</item>
       <item>Switzerland</item>
       <item>Syria</item>
       <item>Taiwan</item>
       <item>Tajikistan</item>
       <item>Tanzania</item>
       <item>Thailand</item>
       <item>Togo</item>
       <item>Tonga</item>
       <item>Trinidad and Tobago</item>
       <item>Tunisia</item>
       <item>Turkey</item>
       <item>Turkmenistan</item>
       <item>Tuvalu</item>
       <item>Uganda</item>
       <item>Ukraine</item>
       <item>United Arab Emirates</item>
       <item>United Kingdom</item>
       <item>United States of America</item>
       <item>Uruguay</item>
       <item>Uzbekistan</item>
       <item>Vanuatu</item>
       <item>Vatican City (Holy See)</item>
       <item>Venezuela</item>
       <item>Vietnam</item>
       <item>Yemen</item>
       <item>Zambia</item>
       <item>Zimbabwe</item>
    </string-array>


    <string name="title_activity_currency_conversion">currencyConversion</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>