<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="#FBC53D"
    android:backgroundTintMode="add">

    <ImageView
        android:id="@+id/massBG"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:adjustViewBounds="true"
        android:background="#FBC53D"
        android:backgroundTintMode="src_over"
        android:fadingEdge="vertical"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mass" />

    <TextView
        android:id="@+id/BgTempText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:alpha="1"
        android:backgroundTintMode="src_over"
        android:fontFamily="casual"
        android:tag="heading"
        android:text="@string/massCon"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/displayMyMass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/FirstMass"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/massBG"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/massIn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_250sdp"
        android:entries="@array/MassUnits"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayMyMass"
        app:layout_constraintVertical_bias="0.12" />


    <TextView
        android:id="@+id/displayToMass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/secondMass"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/massBG"
        app:layout_constraintVertical_bias="0.25" />

    <Spinner
        android:id="@+id/massOut"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_190sdp"
        android:entries="@array/MassUnits"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayToMass" />

    <EditText
        android:id="@+id/MassAmt"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_140sdp"
        android:ems="10"
        android:hint="@string/CD_Mass"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/massOut" />

    <TextView
        android:id="@+id/AnswerMass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="137dp"
        android:hint="@string/thirdCurr"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MassAmt"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/ConvertTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="#E53935"
        android:onClick="conversion"
        android:text="Convert"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnswerMass" />

</androidx.constraintlayout.widget.ConstraintLayout>