<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="#818A94"
    android:backgroundTintMode="add">

    <ImageView
        android:id="@+id/timeBG"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:adjustViewBounds="true"
        android:background="#818A94"
        android:backgroundTintMode="src_over"
        android:fadingEdge="vertical"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/time" />

    <TextView
        android:id="@+id/BgTempText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:alpha="1"
        android:backgroundTintMode="src_over"
        android:fontFamily="casual"
        android:tag="heading"
        android:text="@string/timeCon"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/displayMyTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/FirstTime"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeBG"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/timeIn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_250sdp"
        android:entries="@array/TimeUnits"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayMyTime"
        app:layout_constraintVertical_bias="0.12" />


    <TextView
        android:id="@+id/displayToTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/secondTime"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeBG"
        app:layout_constraintVertical_bias="0.25" />

    <Spinner
        android:id="@+id/timeOut"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_190sdp"
        android:entries="@array/TimeUnits"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayToTime" />

    <EditText
        android:id="@+id/TimeAmt"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_140sdp"
        android:ems="10"
        android:hint="@string/CD_Time"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeOut" />

    <TextView
        android:id="@+id/AnswerTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="137dp"
        android:hint="@string/thirdTime"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimeAmt"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/ConvertTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="#38394E"
        android:onClick="conversion"
        android:text="Convert"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnswerTime" />

</androidx.constraintlayout.widget.ConstraintLayout>