<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="#7594FB"
    android:backgroundTintMode="screen">

    <ImageView
        android:id="@+id/currencyBG"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_200sdp"
        android:adjustViewBounds="true"
        android:background="#7593FA"
        android:backgroundTintMode="src_over"
        android:fadingEdge="vertical"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/currency" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:alpha="1"
        android:backgroundTintMode="src_over"
        android:fontFamily="casual"
        android:tag="heading"
        android:text="@string/currencyCon"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/displayMyCurrency"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:text="@string/FirstCurr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyBG"
        app:layout_constraintVertical_bias="0.02" />

    <Spinner
        android:id="@+id/currencyIn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_250sdp"
        android:entries="@array/CurrencyUnits"
        android:textAlignment="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayMyCurrency"
        app:layout_constraintVertical_bias="0.12" />


    <TextView
        android:id="@+id/displayToCurrency"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/secondtCurr"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyBG"
        app:layout_constraintVertical_bias="0.25" />

    <Spinner
        android:id="@+id/currencyOut"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_190sdp"

        android:entries="@array/CurrencyUnits"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayToCurrency" />

    <EditText
        android:id="@+id/CurrencyAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_140sdp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/CD_curr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyOut" />

</androidx.constraintlayout.widget.ConstraintLayout>