<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="#316501"
    android:backgroundTintMode="add">

    <ImageView
        android:id="@+id/temperatureBG"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_200sdp"
        android:adjustViewBounds="true"
        android:background="#316501"
        android:backgroundTintMode="src_over"
        android:fadingEdge="vertical"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/temperature" />

    <TextView
        android:id="@+id/BgTempText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:alpha="1"
        android:backgroundTintMode="src_over"
        android:fontFamily="casual"
        android:tag="heading"
        android:text="@string/temperatureCon"
        android:textSize="@dimen/_25ssp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/displayMyTemperature"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/FirstTemp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureBG"
        app:layout_constraintVertical_bias="0.02" />

    <Spinner
        android:id="@+id/temperatureIn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_250sdp"
        android:entries="@array/TemperatureUnits"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayMyTemperature"
        app:layout_constraintVertical_bias="0.12" />


    <TextView
        android:id="@+id/displayToTemperature"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/secondTemp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureBG"
        app:layout_constraintVertical_bias="0.25" />

    <Spinner
        android:id="@+id/temperatureOut"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_190sdp"
        android:entries="@array/TemperatureUnits"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayToTemperature" />

    <EditText
        android:id="@+id/TemperatureValue"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_140sdp"
        android:ems="10"
        android:hint="@string/CD_curr"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureOut" />

    <TextView
        android:id="@+id/AnswerTemperature"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="137dp"
        android:hint="@string/thirdTemp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TemperatureValue"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/ConvertTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="#229954"
        android:onClick="conversion"
        android:text="Convert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnswerTemperature"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_10sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>